k8s/core/envoy-gateway/extra/k3s.fsn.as212024.net/gateway-eg-http-public.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-http-public
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-http-public
    annotations:
      io.cilium/lb-ipam-ips: 148.251.148.235,2001:67c:17fc:130::443
      external-dns.alpha.kubernetes.io/hostname: gw-eg-http-public.k3s.fsn.as212024.net
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: eg-http-public-as212024-net-ecdsa-tls
          - name: eg-http-public-as212024-net-rsa-tls
          - name: eg-http-public-devou-ps-ecdsa-tls
          - name: eg-http-public-devou-ps-rsa-tls
          - name: eg-http-public-doyouhavegoodbackups-com-ecdsa-tls
          - name: eg-http-public-doyouhavegoodbackups-com-rsa-tls
          - name: eg-http-public-lama-corp-space-ecdsa-tls
          - name: eg-http-public-lama-corp-space-rsa-tls
          - name: eg-http-public-lama-tel-ecdsa-tls
          - name: eg-http-public-lama-tel-rsa-tls
          - name: eg-http-public-marcerisson-space-ecdsa-tls
          - name: eg-http-public-marcerisson-space-rsa-tls
          - name: eg-http-public-risson-me-ecdsa-tls
          - name: eg-http-public-risson-me-rsa-tls
          - name: eg-http-public-risson-space-ecdsa-tls
          - name: eg-http-public-risson-space-rsa-tls
          - name: eg-http-public-rplace-space-ecdsa-tls
          - name: eg-http-public-rplace-space-rsa-tls
          - name: eg-http-public-cats-acdc-epita-fr-ecdsa-tls
          - name: eg-http-public-cats-acdc-epita-fr-rsa-tls
