k8s/core/envoy-gateway/extra/k3s.fsn.as212024.net/backendtrafficpolicy-eg-http-public.yml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: eg-http-public
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: eg-http-public
  compression:
    - type: Brotli
    - type: Gzip
