k8s/core/envoy-gateway/extra/k3s.fsn.as212024.net/httproute-http-to-https.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
spec:
  parentRefs:
    - name: eg-http-public
      sectionName: http
    - name: eg-http-bar
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
